windows/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  labels:
    app: sample
spec:
  replicas: 1
  template:
    metadata:
      name: sample
      labels:
        app: sample
    spec:
      nodeSelector:
        "kubernetes.io/os": windows
      containers:
      - name: sample
        image: interbeing/ems:latest
        command: ["cmd", "/c", "echo Hello, World! && ping -t 127.0.0.1 > NUL"]
        resources:
          limits:
            cpu: 2
            memory: 8000M
        ports:
          - containerPort: 443
  selector:
    matchLabels:
      app: sample
---
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 443
  selector:
    app: sample
